<resources>
    <string name="app_name">PracticalTest01Var04</string>
    <string name="action_settings">Settings</string>
    <string name="play">Play</string>
    <string name="number_label">Number</string>
    <string name="guess">Guess</string>
    <string name="check">Check</string>
    <string name="generate">Generate</string>
    <string name="back">Back</string>
    <string name="score">Score</string>
    <string name="title_activity_practical_test01_var02_play">PracticalTest01Var02PlayActivity
    </string>
</resources>
